--- a/todolist/todolist-jdbc/pom.xml
+++ b/todolist/todolist-jdbc/pom.xml
@@ -66,6 +66,13 @@
             <version>${jboss-servlet-api_3.0_spec.version}</version>
             <scope>provided</scope>
         </dependency>
+        
+     <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
+
     </dependencies>
 
     <build>
