--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/web.xml
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
   <display-name>ProjectCRUDOperations</display-name>
   
     <welcome-file-list>
-      <welcome-file>index.jsp</welcome-file>
+      <welcome-file>/index.jsp</welcome-file>
     </welcome-file-list>
   
     <servlet>
@@ -16,7 +16,7 @@
 
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/MainServlet</url-pattern>
+        <url-pattern>/index.jsp</url-pattern>
     </servlet-mapping>
     
   
