--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/web.xml
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/index.jsp</url-pattern>
+        <url-pattern>/MainServlet</url-pattern>
     </servlet-mapping>
     
   
